--- a/transpose2.html
+++ b/transpose2.html
@@ -60,6 +60,7 @@
   </div>
   <div class="containerd">
     <div class="title">
+      <div class="badge badge-primary" id="notesKey">saa</div>
       <h1 id="titlename">Transpose</h1>
     </div>
     <div class="addSect">
@@ -86,13 +87,16 @@
       <button id="translate" class="add">translate</button>
       <button id="staff" class="add">staff</button>
     </div>
-    <div class="list" id="capture"></div>x
+    <div class="list" id="capture"></div>
   </div>
 <div class="mutt d-flex">
-        <button type="button" class="btn btn-primary fixRight" data-toggle="modal" data-target="#exampleModal">
-        <i class="fa fa-camera"></i>
-      </button>
-    <button type="button" class="btn btn-primary fixRight posR" data-toggle="modal" data-target="#exampleModal2">
+  <button type="button" class="btn btn-primary fixRight" data-toggle="modal" data-target="#exampleModal">
+    <i class="fa fa-camera"></i>
+  </button>
+    <button type="button" class="btn btn-primary fixRight posRR"  >
+    <i class="fa fa-gift"></i>
+  </button>
+    <button type="button" class="btn btn-secondary fixRight posR" data-toggle="modal" data-target="#exampleModal2">
     <i class="fa fa-phone"></i>
   </button>
 </div>
@@ -102,13 +106,14 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Capture</h5>
+          <h5 class="modal-title">  <select name="" id="missing"></select>
+          </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-            <iframe src="tranpose2t.html" frameborder="0" width="750px" height="500px"></iframe>
+            <iframe src="tranpose2t.html" frameborder="0" id="myiframe" width="750px" height="500px"></iframe>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary">Save changes</button>
@@ -168,6 +173,7 @@
   </script>
   <script type="text/javascript" src="varnotes2.js">
   </script>
+
   <script>
     // notex = notex + raagnotes;
 
@@ -184,9 +190,10 @@
 
       }
     }
+    btn.innerHTML+=Object.keys(notex).length
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="../../htmltocanvas.min.js"></script>
+  <script src="htmltocanvas.min.js"></script>
   <script>
     document.addEventListener("keyup", (e) => {
       if (e.keyCode == 67 && e.keyCode == 16) {
@@ -204,8 +211,6 @@
       });
     })
     // console.log(mydata[0].age);
-    // console.log(mydata[1].name);
-    // console.log(mydata[1].age);
 
     document.querySelector("#staff").addEventListener("click", (e) => {
       a = eval(songs.value)
@@ -218,41 +223,17 @@
       localStorage.setItem("totranslatenote", cccc);
       location.href = "transpose4.html"
     });
+
+    var ifr = document.querySelector("#myiframe");
+    const ifrwindow=ifr.contentWindow;
+    const ifrdocument=ifr.contentDocument;
+
+
+  </script>
+  <script type="text/javascript" src="transpose2.js">
   </script>
 
-  <script>
-    abcd = "c#d#f#"
-    console.log(splitnotes(abcd));
-
-    function splitnotes(abcd) {
-      defg = [];
-      bcde = abcd.split("")
-      bcde.forEach((cdef, index) => {
-        if (cdef.includes("#")) {
-          defg.push(index)
-
-        }
-      })
-
-      for (j = 0; j < bcde.length; j++) {
-        for (i = 0; i < defg.length; i++) {
-          if (j == defg[i]) {
-            bcde[j - 1] = bcde[j - 1] + bcde[defg[i]]
-          }
-        }
-      }
-
-      w = 0;
-      for (i = 0; i < defg.length; i++) {
-        bcde.splice(defg[i] - w, 1)
-        w++;
-      }
-      return bcde.join().split(",");
-      // return bcde.join().split(", ,");
-    }
-  </script>
-
-  <script>
+  <!-- <script>
     const Ckey = ["c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "-"];
     const Nepnotes = ["सा", "रेे।", "रे", "ग|", "ग", "म", "म।", "प", "ध।", "ध", "नि।", "नि", "-"];
     const Newanotes = ["न", "माे।", "माे", "बा।", "बा।", "गे", "म।", "साे", "ध।", "रा", "नि।", "क", "-"];
@@ -289,7 +270,6 @@
       songl.addEventListener("click", (e) => {
         songlid = songl.id
         songlid2 = songlid
-        // alert("herum" + eval(songlid2.replace('.note', '.beat')), songlid);
         document.querySelector("#titlename").innerHTML =songlid2.replace("notex.", "").replace(".note","")
         document.querySelector("#notesearch").value=songlid2.replace("notex.", "").replace(".note","")
         songlid.replace("note.", "")
@@ -299,9 +279,7 @@
           document.getElementById(cursongtwo).className = "";
           cursongtwo = songlid;
         }
-        alert("key" + eval(songlid2.replace('.note', '.key')),songl.className);
         songl.className = "active"
-        // alert("herum" + eval(songlid2.replace('.note', '.key')));
       try{
         transpose(eval(songlid), eval(songkey.value + "key"), eval(songlid.replace(".note", ".beat")))
       }
@@ -325,7 +303,6 @@
     })
     songs.addEventListener("change", () => {
       // a = song.value;
-      // alert("herum" + a.replace('.note', '.key'));
       document.querySelector("#titlename").innerHTML = (songs.value).replace(".note", "")
       // songkey.value=""
       transpose(eval(songs.value), eval(songkey.value + "key"), eval((songs.value).replace(".note", ".beat")))
@@ -376,13 +353,18 @@
 
         } else {
           // onee transpose C=>D
-          Ckey.forEach((ckey, index) => {
+          newscale.push(key[Ckey.indexOf(note[i])]);
+
+          // Nepnotes[Ckey.indexOf(note[i])]
+/*           Ckey.forEach((ckey, index) => {
             if (note[i].toLowerCase() == ckey) {
               // console.log(note[i].toLowerCase(), i, Ckey[j], j)
               // console.log(key[j], newscale)
               newscale.push(key[index]);
             }
-          })
+          }) */
+
+
         }
       }
       totranspose = newscale;
@@ -475,7 +457,7 @@
       table.prepend(thead)
       body.prepend(table)
     }
-  </script>
+  </script> -->
 </body>
 
 </html>
