--- a/transpose2.html
+++ b/transpose2.html
@@ -7,14 +7,19 @@
   <title>change scale</title>
   <link rel="shortcut icon" href="https://www.transparentpng.com/thumb/musical-notes/music-notes-png-pictures-3.png"
     type="image/x-icon">
+
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+ -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="../resources/perfect.css">
   <link rel="stylesheet" href="transposenote.css">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 
 <style>
@@ -45,7 +50,7 @@
   }
 
 </style>
-<body>
+<body id="body">
 
   <div class="toggle" id="toggle">
     <i class="fa fa-folder-open"></i>
@@ -66,6 +71,8 @@
     <div class="addSect">
       <input type="text" id="notesearch" name="notesearch" placeholder="Enter your song name..." list="songsearch">
       <select name="" id="songs" hidden></select>
+      <select name="" id="missing"></select>
+
       <datalist id="songsearch">
       </datalist>
 
@@ -87,26 +94,27 @@
       <button id="translate" class="add">translate</button>
       <button id="staff" class="add">staff</button>
     </div>
-    <div class="list" id="capture"></div>
+    <div class="list" ></div>
   </div>
 <div class="mutt d-flex">
   <button type="button" class="btn btn-primary fixRight" data-toggle="modal" data-target="#exampleModal">
     <i class="fa fa-camera"></i>
   </button>
+  <button type="button" class="btn btn-secondary fixRight posRRR" data-toggle="modal" data-target="#exampleModal3">
+    <i class="fa fa-info"></i>
+    </button>
     <button type="button" class="btn btn-primary fixRight posRR"  >
     <i class="fa fa-gift"></i>
   </button>
     <button type="button" class="btn btn-secondary fixRight posR" data-toggle="modal" data-target="#exampleModal2">
     <i class="fa fa-phone"></i>
   </button>
-</div>
-
 
   <div class="modal fade bd-example-modal-lg" id="exampleModal2" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">  <select name="" id="missing"></select>
+          <h5 class="modal-title">  
           </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -123,6 +131,25 @@
     </div>
   </div>
 
+  <div class="modal fade bd-example-modal-lg" id="exampleModal3" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Info</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body Rinfo text-dark">
+
+        </div>
+        <!-- <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div> -->
+      </div>
+    </div>
+  </div>
   <div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
@@ -173,6 +200,57 @@
   </script>
   <script type="text/javascript" src="varnotes2.js">
   </script>
+<script>
+  var infoo={"total":0,"eng":0,"nep":0,"hin":0,"newa":0,"oth":0,"A":0,"B":0,"C":0,"D":0,"E":0,"F":0,"G":0}
+  infoo.total=Object.keys(notex).length
+  Object.keys(notex).forEach(notea=>{
+    if(notex[notea].locale !=""){
+      if(notex[notea].locale == "english" ||notex[notea].locale == "English"){
+        infoo.eng+=1  
+      }
+      else if(notex[notea].locale == "nepali" ||notex[notea].locale == "Nepali"){
+        infoo.nep+=1  
+      }
+      else if(notex[notea].locale == "hindi" ||notex[notea].locale == "Hindi"){
+        infoo.hin+=1  
+      }
+      else if(notex[notea].locale == "newari" ||notex[notea].locale == "Newari"){
+        infoo.newa+=1  
+      }
+      else{
+        infoo.oth+=1  
+      }
+    }
+    if(notex[notea].key !=""){
+      if(notex[notea].key =="A"){
+          infoo.A+=1  
+        }
+        if(notex[notea].key =="B"){
+          infoo.B+=1  
+        }
+        if(notex[notea].key =="C"){
+          infoo.C+=1  
+        }
+        if(notex[notea].key =="D"){
+          infoo.D+=1  
+        }
+        if(notex[notea].key =="E"){
+          infoo.E+=1  
+        }
+        if(notex[notea].key =="F"){
+          infoo.F+=1  
+        }
+        if(notex[notea].key =="G"){
+          infoo.G+=1  
+        }
+    }
+  })
+
+Object.keys(infoo).forEach(inf=>{
+  document.querySelector(".Rinfo").innerHTML+= `${inf} : ${infoo[inf]}<br>`
+
+})
+</script>
 
   <script>
     // notex = notex + raagnotes;
@@ -224,6 +302,23 @@
       location.href = "transpose4.html"
     });
 
+    function sort(){
+      var notehaikokey = [];
+    okn=Object.keys(notex)
+    okn.forEach(ookn=>{
+    cx=notex[ookn].key
+    cx=cx.toLowerCase()
+    notehaikokey.push(Ckey.indexOf(cx)+ookn)
+    })
+
+  notehaikokey.sort()
+
+  notehaikokey.forEach((key,index)=>{
+  notehaikokey[index]=key.slice(1,key.length)
+  })
+
+}
+
     var ifr = document.querySelector("#myiframe");
     const ifrwindow=ifr.contentWindow;
     const ifrdocument=ifr.contentDocument;
@@ -233,231 +328,7 @@
   <script type="text/javascript" src="transpose2.js">
   </script>
 
-  <!-- <script>
-    const Ckey = ["c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "-"];
-    const Nepnotes = ["सा", "रेे।", "रे", "ग|", "ग", "म", "म।", "प", "ध।", "ध", "नि।", "नि", "-"];
-    const Newanotes = ["न", "माे।", "माे", "बा।", "बा।", "गे", "म।", "साे", "ध।", "रा", "नि।", "क", "-"];
-    const solfege = ["do", "re।", "re", "mi।", "mi", "fa", "so।", "so", "la।", "la", "ti।", "ti", "-"];
-    const Cskey = ["c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "c", "-"];
-    const Dkey = ["d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "c", "c#", "-"];
-    const Dskey = ["d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "c", "c#", "d", "-"];
-    const Ekey = ["e", "f", "f#", "g", "g#", "a", "a#", "b", "c", "c#", "d", "d#", "-"];
-    const Fkey = ["f", "f#", "g", "g#", "a", "a#", "b", "c", "c#", "d", "d#", "e", "-"];
-    const Fskey = ["f#", "g", "g#", "a", "a#", "b", "c", "c#", "d", "d#", "e", "f", "-"];
-    const Gkey = ["g", "g#", "a", "a#", "b", "c", "c#", "d", "d#", "e", "f", "f#", "-"];
-    const Gskey = ["g#", "a", "a#", "b", "c", "c#", "d", "d#", "e", "f", "f#", "g", "-"];
-    const Akey = ["a", "a#", "b", "c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "-"];
-    const Askey = ["a#", "b", "c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "-"];
-    const Bkey = ["b", "c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "-"];
 
-    songs = document.querySelector("#songs");
-    songstwoli = document.querySelectorAll("#songstwo li");
-    songkey = document.querySelector("#songkey");
-    translate = document.querySelector("#translate");
-    // Ckey.map(key => console.log(`${key} is the natural key`))
-    var cursongtwo = "";
-    translate.addEventListener("click", () => {
-      // translates(eval(songs.value))
-      // translates(totranspose, 8)
-      console.log("totbeat"+totbeat)
-      try{
-        transpose(totranspose, eval("Nepnotes"), totbeat)
-      }
-      catch(e){
-        console.log(e)
-      }    });
-    songstwoli.forEach(songl => {
-      songl.addEventListener("click", (e) => {
-        songlid = songl.id
-        songlid2 = songlid
-        document.querySelector("#titlename").innerHTML =songlid2.replace("notex.", "").replace(".note","")
-        document.querySelector("#notesearch").value=songlid2.replace("notex.", "").replace(".note","")
-        songlid.replace("note.", "")
-        if (cursongtwo == "") {
-          cursongtwo = songlid;
-        } else {
-          document.getElementById(cursongtwo).className = "";
-          cursongtwo = songlid;
-        }
-        songl.className = "active"
-      try{
-        transpose(eval(songlid), eval(songkey.value + "key"), eval(songlid.replace(".note", ".beat")))
-      }
-      catch(e){
-        console.log(e)
-      }
-      });
-    })
-    document.querySelector("#notesearch").addEventListener("keyup", (e) => {
-      if (e.keyCode == 13) {
-        noteserchval = document.querySelector("#notesearch").value;
-        notesearched = noteserchval.replaceAll(" ", "")
-        songstwoli.forEach(songl => {
-        songl.className="";
-        });
-        document.getElementById(`notex.${notesearched}.note`).className ="active"
-        transpose(eval("notex." + notesearched + ".note"), eval(songkey.value + "key"), eval("notex." +
-          notesearched +
-          ".beat"))
-      }
-    })
-    songs.addEventListener("change", () => {
-      // a = song.value;
-      document.querySelector("#titlename").innerHTML = (songs.value).replace(".note", "")
-      // songkey.value=""
-      transpose(eval(songs.value), eval(songkey.value + "key"), eval((songs.value).replace(".note", ".beat")))
-    });
-    songkey.addEventListener("change", () => {
-      document.querySelector("#titlename").innerHTML = songs.value
-      transpose(eval(songs.value), eval(songkey.value + "key"), eval((songs.value).replace(".note", ".beat")))
-    });
-
-    var totranspose = [];
-    var totbeat ;
-
-    function transpose(note, key, beat) {
-      console.log("html", note, key)
-
-      newscale = [];
-      //       if(cd="A"){
-      // nepali ma add+
-      // }
-      for (i = 0; i < note.length; i++) {
-        if (note[i].length >= 2 && note[i].length < 9) {
-          // if (note[i].length == 2 || note[i].length == 3 || note[i].length == 4 || note[i].length == 5) {
-          notej = [];
-          let notei;
-          if (note[i].includes("#")) {
-            notei = splitnotes(note[i])
-          } else {
-            notei = note[i].split("")
-          }
-          console.log("notei:" + notei, note[i])
-          for (z = 0; z < notei.length; z++) {
-            // notei = breakdown of "cdef" to "c","d"
-            Ckey.forEach((ckey, index) => {
-              //def=> converted to d#ff# if key cskey
-              if (notei[z].toLowerCase() == ckey) {
-                // console.log(Ckey[x], notei[z], key[x])
-                notej.push(key[index])
-              }
-            })
-          }
-          // console.log("my length" + note[i].length, note[i]);
-          // console.log(notej + "conjoined piece")
-          const searchRegExp = /,/g;
-          const replaceWith = '';
-          const result = notej.join().replace(searchRegExp, replaceWith);
-          // console.log(result)
-          newscale.push(result);
-
-        } else {
-          // onee transpose C=>D
-          newscale.push(key[Ckey.indexOf(note[i])]);
-
-          // Nepnotes[Ckey.indexOf(note[i])]
-/*           Ckey.forEach((ckey, index) => {
-            if (note[i].toLowerCase() == ckey) {
-              // console.log(note[i].toLowerCase(), i, Ckey[j], j)
-              // console.log(key[j], newscale)
-              newscale.push(key[index]);
-            }
-          }) */
-
-
-        }
-      }
-      totranspose = newscale;
-      totbeat=beat
-      maketable(beat);
-      tabledisplay(newscale, beat);
-      return newscale;
-    }
-
-    function tabledisplay(na, beat) {
-      console.log("html");
-
-      // maketable();
-      count = 0;
-      tbody = document.querySelector('.tbody');
-      let tr;
-      for (i = 0; i < na.length; i++) {
-        if (i % beat == 0) {
-          tr = document.createElement('tr');
-        }
-        let td = document.createElement('td');
-        td.innerHTML = na[i];
-        tr.appendChild(td);
-        tbody.appendChild(tr);
-      }
-    }
-
-    function hearme() {
-      navigator.mediaDevices.getUserMedia({
-          audio: true
-        }).then(function (localStream) {
-          var audioContext = new(window.AudioContext || window.webkitAudioContext)();
-
-          var input = audioContext.createMediaStreamSource(localStream);
-          var analyser = audioContext.createAnalyser();
-          var scriptProcessor = audioContext.createScriptProcessor();
-          // Some analyser setup
-          analyser.smoothingTimeConstant = 0;
-          analyser.fftSize = 64;
-
-          input.connect(analyser);
-          analyser.connect(scriptProcessor);
-          scriptProcessor.connect(audioContext.destination);
-          var getAverageVolume = function (array) {
-            var length = array.length;
-            var values = 0;
-            var i = 0;
-            for (; i < length; i++) {
-              values += array[i];
-            }
-            return values / length;
-          };
-          var onAudio = function () {
-            var tempArray = new window.Uint8Array(analyser.frequencyBinCount);
-            analyser.getByteFrequencyData(tempArray);
-            // console.log(tempArray)
-            var latestFrequency = (getAverageVolume(tempArray));
-            //use latestFrequency
-            // console.log(latestFrequency)
-          };
-          scriptProcessor.onaudioprocess = onAudio;
-        })
-        .catch(function () {
-          //Handle error
-        });
-    }
-
-    function maketable(numoftab) {
-      console.log("html", numoftab)
-
-      body = document.querySelector('.list');
-      body.innerHTML = ""
-      table = document.createElement('table');
-      table.className = "table table-hover"
-      thead = document.createElement('thead');
-      thead.className = "thead bg-dark text-light"
-      tbody = document.createElement('tbody');
-      tbody.className = "tbody"
-      theadtr = document.createElement('tr');
-      var tds = [];
-      for (var i = 0; i < numoftab; i++) {
-        tds[i] = document.createElement("td");
-        tds[i].innerHTML = i + 1;
-      }
-      table.prepend(tbody)
-      for (var i = (numoftab - 1); i >= 0; i--) {
-        theadtr.prepend(tds[i])
-      }
-      thead.prepend(theadtr)
-      table.prepend(thead)
-      body.prepend(table)
-    }
-  </script> -->
 </body>
 
 </html>
