--- a/accordianimg.html
+++ b/accordianimg.html
@@ -67,22 +67,27 @@
 
   .img1 {
     background: url("/dog1.jpg");
+          background-size: cover;
   }
 
   .img2 {
     background: url("/dog2.jpg");
+          background-size: cover;
   }
 
   .img3 {
     background: url("/dog3.jpg");
+          background-size: cover;
   }
 
   .img4 {
     background: url("/dog4.jpg");
+          background-size: cover;
   }
 
   .img5 {
     background: url("/dog5.jpg");
+          background-size: cover;
   }
 </style>
 
