--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 </style>
 
 <body>
-  <a href="alltransform.html">alltransform</a>
   <a href="clipather.html">clipather</a>
-  <a href="colorandinverse.html">colorandinverse</a>
   <a href="commentlist.html">commentlist</a>
   <a href="covidtracker.html">covidtracker</a>
   <a href="qrcode.html">QR make</a>
-  <a href="checkNeumorphic.html">neumorphic test</a>
   <a href="binaryconverter.html">binaryconverter</a>
-  <a href="dynamicgradient.html">dynamicgradient</a>
+  <a href="./cssComponents/all╬transform.html">alltransform</a>
+  <a href="./cssComponents/co«lorandinverse.html">colorandinverse</a>
+  <a href="./cssComponents/☻checkNeumorphic.html">neumorphic test</a>
+  <a href="./cssComponents/dynamicgradient.html">dynamicgradient</a>
   <a href="allgradients.html">allgradients</a>
   <a href="guessnumber.html">guessnumber</a>
   <a href="gyrooo.html">gyrooo.html</a>
