--- a/index.html
+++ b/index.html
@@ -46,11 +46,6 @@
   <a href="covidtracker.html">covidtracker</a>
   <a href="qrcode.html">QR make</a>
   <a href="binaryconverter.html">binaryconverter</a>
-  <a href="./cssComponents/all╬transform.html">alltransform</a>
-  <a href="./cssComponents/co«lorandinverse.html">colorandinverse</a>
-  <a href="./cssComponents/☻checkNeumorphic.html">neumorphic test</a>
-  <a href="./cssComponents/dynamicgradient.html">dynamicgradient</a>
-  <a href="allgradients.html">allgradients</a>
   <a href="guessnumber.html">guessnumber</a>
   <a href="gyrooo.html">gyrooo.html</a>
   <a href="moviesearch.html">moviesearch</a>
@@ -64,6 +59,15 @@
   <a href="spr.html">spr</a>
   <a href="simple app.html">simple app</a>
   <a href="crud.html">crud</a>
+  <a href="wavesvgmaker.html">waves</a>
+  <a href="./cssComponents/all╬transform.html">alltransform</a>
+  <a href="./cssComponents/colorandinverse.html">colorandinverse</a>
+  <a href="./cssComponents/checkNeumorphic.html">neumorphic test</a>
+  <a href="./cssComponents/dynamicgradient.html">dynamicgradient</a>
+  <a href="./cssComponents/generatecolor.html">color generator</a>
+  <a href="./cssComponents/rgbgenerator.html">rgb</a>
+  <a href="./cssComponents/allgradients.html">allgradients</a>
+  <a href="./generatePassword.html">generatePassword</a>
   <a href="transpose2.html">transpose2</a>
   <a href="typing.html">typing</a>
   <a href="typingspeed.html">typingspeed</a>
