--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+scroll-behavior: smooth;
+overflow: scroll;
   }
 
   a,
