--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ overflow: scroll;
   <a href="simple app.html">simple app</a>
   <a href="crud.html">crud</a>
   <a href="wavesvgmaker.html">waves</a>
-  <a href="./cssComponents/all╬transform.html">alltransform</a>
+  <a href="./cssComponents/alltransform.html">alltransform</a>
   <a href="./cssComponents/colorandinverse.html">colorandinverse</a>
   <a href="./cssComponents/checkNeumorphic.html">neumorphic test</a>
   <a href="./cssComponents/dynamicgradient.html">dynamicgradient</a>
