--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <style>
-  body {
+  iframe,body {
     background: #eaeaea;
     width: 100%;
     height: 100vh;
@@ -23,7 +23,7 @@ scroll-behavior: smooth;
 overflow: scroll;
   }
 
-  a,
+  /* a,
   a:link {
     text-decoration: none;
     text-transform: uppercase;
@@ -42,7 +42,7 @@ overflow: scroll;
     background: #eee;
     box-shadow: 5px 5px 3px gray;
 
-  }
+  } */
 </style>
 
 <body>
@@ -74,7 +74,7 @@ overflow: scroll;
 </div>
 <iframe id="gamemaybeIframe" src="./blogwriter.html" width="100px" height="800px" frameborder="0" allowfullscreen></iframe>
 </div>
-<a href="clipather.html">clipather</a>
+<!-- <a href="clipather.html">clipather</a>
 <a href="commentlist.html">commentlist</a>
 <a href="covidtracker.html">covidtracker</a>
 <a href="qrcode.html">QR make</a>
@@ -104,7 +104,7 @@ overflow: scroll;
 <a href="./generatePassword.html">generatePassword</a>
 <a href="transpose2.html">transpose2</a>
 <a href="typing.html">typing</a>
-<a href="typingspeed.html">typingspeed</a>
+<a href="typingspeed.html">typingspeed</a> -->
 
 </body>
 <script>
