--- a/index.html
+++ b/index.html
@@ -54,14 +54,20 @@ overflow: scroll;
     </div>
     <div class="offcanvas-body">
       <div class="btn-group-vertical d-grid gap-2">
-        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/alltransform.html">alltransform</button>
-        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/patternGenerator.html">patternGenerator</button>
-        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/colorandinverse.html">colorandinverse</button>
-        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/checkNeumorphic.html">checkNeumorphic</button>
-        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/dynamicgradient.html">dynamicgradient</button>
-        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/generatecolor.html">generatecolor</button>
-        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/rgbgenerator.html">rgbgenerator</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/3dphoto.html">3dphoto</button>
         <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/allgradients.html">allgradients</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/alltransform.html">alltransform</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/checkNeumorphic.html">checkNeumorphic</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/circle geenrator.html">circle geenrator</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/circle geenrator2.html">circle geenrator</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/colorandinverse.html">colorandinverse</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/colorcheck.html">colorcheck</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/colortransition.html">colortransition</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/dynamicgradient.html">dynamicgradient</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/filterphoto.html">filterphoto</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/generatecolor.html">generatecolor</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/patternGenerator.html">patternGenerator</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/rgbgenerator.html">rgbgenerator</button>
         <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./generatePassword.html">">./generatePassword</button>
       </div>
     </div>
