--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@ overflow: scroll;
 "filterphoto",
 "generatecolor",
 "patternGenerator",
-"rgbgenerator"]
+"rgbgenerator"],
+apiTry:[
+  "animeFActs","animeQoute","animesearch","Dnd","hogwarts","fannas","digimon","deckofcard","morse and skew","photoapi","moviesearch","waifu"
+]
   }
   Object.keys(mapFiles).forEach(m=>{
     mapFiles[m].forEach(mm=>{
