--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ overflow: scroll;
     </div>
     <div class="offcanvas-body">
       <div class="btn-group-vertical d-grid gap-2" id="ListOfBtn">
-        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/3dphoto.html">3dphoto</button>
+        <!-- <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/3dphoto.html">3dphoto</button>
         <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/allgradients.html">allgradients</button>
         <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/alltransform.html">alltransform</button>
         <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/checkNeumorphic.html">checkNeumorphic</button>
@@ -68,7 +68,7 @@ overflow: scroll;
         <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/generatecolor.html">generatecolor</button>
         <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/patternGenerator.html">patternGenerator</button>
         <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./cssComponents/rgbgenerator.html">rgbgenerator</button>
-        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./generatePassword.html">">./generatePassword</button>
+        <button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./generatePassword.html">">./generatePassword</button> -->
       </div>
     </div>
   </div>
@@ -131,8 +131,10 @@ overflow: scroll;
 "patternGenerator",
 "rgbgenerator"],
 apiTry:[
-  "animeFActs","animeQoute","animesearch","Dnd","hogwarts","fannas","digimon","deckofcard","morse and skew","photoapi","moviesearch","waifu"
-]
+  "animeFActs","animeQoute","animesearch","Dnd","hogwarts","fannas","digimon","deckofcard","morse and skew","photoapi","moviesearch","waifu","keyframe","keyframe copy","randomanime","weatherapi","ytsapi"
+],
+"":["chartbox","chatapp","binaryconverter","circlescatter","circleLoading","crud","foodcar"]
+
   }
   Object.keys(mapFiles).forEach(m=>{
     mapFiles[m].forEach(mm=>{
