--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@ overflow: scroll;
     box-shadow: 5px 5px 3px gray;
 
   } */
+  .btn-float{
+    position: absolute;
+    bottom:20px;
+    right:20px;
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+ }
 </style>
 
 <body>
@@ -74,7 +82,7 @@ overflow: scroll;
   </div>
 <div class="container-fluid row">
 <div class="col-12 mx-auto d-grid gap-2">
-      <button class="btn btn-outline-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+      <button class="btn btn-outline-primary btn-float" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
         Menu
       </button>
 </div>
