--- a/index.html
+++ b/index.html
@@ -88,37 +88,7 @@ overflow: scroll;
 </div>
 <iframe id="gamemaybeIframe" src="./blogwriter.html" width="100px" height="800px" frameborder="0" allowfullscreen></iframe>
 </div>
-<!-- <a href="clipather.html">clipather</a>
-<a href="commentlist.html">commentlist</a>
-<a href="covidtracker.html">covidtracker</a>
-<a href="qrcode.html">QR make</a>
-<a href="binaryconverter.html">binaryconverter</a>
-<a href="guessnumber.html">guessnumber</a>
-<a href="gyrooo.html">gyrooo.html</a>
-<a href="moviesearch.html">moviesearch</a>
-<a href="weatherapi.html">weather</a>
-<a href="headntail.html">headntail</a>
-<a href="pinlogin.html">pinlogin</a>
-<a href="slicedtext.html">slicedtext</a>
-<a href="keyboard.html">keyboard</a>
-<a href="mirrorword.html">mirrorword</a>
-<a href="stopwatch.html">stopwatch</a>
-<a href="spr.html">spr</a>
-<a href="simple app.html">simple app</a>
-<a href="crud.html">crud</a>
-<a href="wavesvgmaker.html">waves</a>
-<a href="./cssComponents/alltransform.html">alltransform</a>
-<a href="./cssComponents/patternGenerator.html">patternGenerator</a>
-<a href="./cssComponents/colorandinverse.html">colorandinverse</a>
-<a href="./cssComponents/checkNeumorphic.html">neumorphic test</a>
-<a href="./cssComponents/dynamicgradient.html">dynamicgradient</a>
-<a href="./cssComponents/generatecolor.html">color generator</a>
-<a href="./cssComponents/rgbgenerator.html">rgb</a>
-<a href="./cssComponents/allgradients.html">allgradients</a>
-<a href="./generatePassword.html">generatePassword</a>
-<a href="transpose2.html">transpose2</a>
-<a href="typing.html">typing</a>
-<a href="typingspeed.html">typingspeed</a> -->
+
 
 </body>
 <script>
@@ -141,8 +111,8 @@ overflow: scroll;
 apiTry:[
   "animeFActs","animeQoute","animesearch","Dnd","hogwarts","fannas","digimon","deckofcard","morse and skew","photoapi","moviesearch","waifu","keyframe","keyframe copy","randomanime","weatherapi","ytsapi"
 ],
-"":["chartbox","chatapp","binaryconverter","circlescatter","circleLoading","crud","foodcar"]
-
+"":["chartbox","chatapp","binaryconverter","circlescatter","circleLoading","crud","foodcar","stickychat","twocardimg","slider","slicedtext","sentenceenhance","searchableselecet","scrollbar","rotatinggallery","relaxer","qrcode","particles","nousetorch","net","mobileonthouch","mirrorworld","messagelove","menubarnew","mangatodo","hoverbtn","heught","headntail","gyrooo","gymtimer","flowbtn"]
+ 
   }
   Object.keys(mapFiles).forEach(m=>{
     mapFiles[m].forEach(mm=>{
