--- a/simple Projects JS/morsecode.html
+++ b/simple Projects JS/morsecode.html
@@ -41,9 +41,46 @@
 var text=document.querySelector("#text")
 var morse=document.querySelector("#morse")
 
-var morsed=[".-","-...","-.-.","-..",".","..-.","--.","....","..",".---","  -.-",".-..","--","-.","---",".--.","--.-",".-.","...","-","..-","...-",".--","-..-","-.--","--..-----",".----","..---","...--","....-",".....","-....","--...","---..","----."," "]
+var morsed=[".-","-...","-.-.","-..",".","..-.","--.","....","..",".---","-.-",".-..","--","-.","---",".--.","--.-",".-.","...","-","..-","...-",".--","-..-","-.--","--..-----",".----","..---","...--","....-",".....","-....","--...","---..","----."," "]
 var texted=["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w","x","y","z","0","1","2","3","4","5","6","7","8","9","  "]
-
+var mapMorse={
+"0":".----",
+"1":"..---",
+"2":"...--",
+"3":"....-",
+"4":".....",
+"5":"-....",
+"6":"--...",
+"7":"---..",
+"8":"----.",
+"9":" ",
+"a":".-",
+"b":"-...",
+"c":"-.-.",
+"d":"-..",
+"e":".",
+"f":"..-.",
+"g":"--.",
+"h":"....",
+"i":"..",
+"j":".---",
+"k":"-.-",
+"l":".-..",
+"m":"--",
+"n":"-.",
+"o":"---",
+"p":".--.",
+"q":"--.-",
+"r":".-.",
+"s":"...",
+"t":"-",
+"u":"..-",
+"v":"...-",
+"w":".--",
+"x":"-..-",
+"y":"-.--",
+"z":"--..-----"
+}
 text.addEventListener("keyup", (e)=>{
     if(e.keyCode){
         textToMorse(text.value)
