--- a/simple Projects JS/morsecode.html
+++ b/simple Projects JS/morsecode.html
@@ -23,17 +23,15 @@
     font-size: 20px;
     font-weight: 600;
     -webkit-accent-color:#ff4d6d;
+    accent-color:#ff4d6d;
     }
-    #text{
-
-    }
-
+    
     #text::selection{
         /* background-color: #42C6FF; */
         background-color: #AF26FF;
         color:#ffffff;
     }
-    #morse{}
+
 </style>
  <input type="text" placeholder="enter your text" name="" id="text">
 <input type="text" placeholder="enter your morse" name="" id="morse">
