--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="shortcut icon" href="https://www.transparentpng.com/thumb/musical-notes/music-notes-png-pictures-3.png"
+  type="image/x-icon">
+
+  <meta name="description" content="A this page enables user to change a eastern classical notes to be converted and check">
+  <meta name="keywords" content="classical,notes,music" />
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Transpose notes flutisthacker">
+  <meta itemprop="description" content="Short web app for note and music">
+  <meta itemprop="image" content="https://www.transparentpng.com/thumb/musical-notes/music-notes-png-pictures-3.png">
+  <meta name="google" content="notranslate">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="Transpose notes flutisthacker">
+  <meta name="twitter:title" content="Notes changer">
+  <meta name="twitter:description" content="Short web app for note and music">
+  <meta name="twitter:image" content="https://www.transparentpng.com/thumb/musical-notes/music-notes-png-pictures-3.png">
+  <title>saman tni | KUDO Interpreter Profile</title>
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://transposenotes.pages.dev/">
+  <meta property="og:title" content="Notes changer">
+  <meta property="og:description" content="Short web app for note and music">
+  <meta property="og:image" content="https://www.transparentpng.com/thumb/musical-notes/music-notes-png-pictures-3.png">
+  <meta property="og:image:secure_url" content="https://www.transparentpng.com/thumb/musical-notes/music-notes-png-pictures-3.png">
+  <meta property="og:image:type" content="image/jpeg">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://transposenotes.pages.dev/">
+  <meta property="og:title" content="Notes changer">
+  <meta property="og:description" content="Short web app for note and music">
+  <meta property="og:image" content="https://www.transparentpng.com/thumb/musical-notes/music-notes-png-pictures-3.png">
 
 </head>
 <style>
