--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ apiTry:[
   Object.keys(mapFiles).forEach(m=>{
     $("#ListOfBtn").innerHTML+=`<button class="btn btn-info btn-block">${m}</button>`
     mapFiles[m].forEach(mm=>{
-        $("#ListOfBtn").innerHTML+=(`<button class="btn btn-primary btn-block" onclick="changeIframeSrc(this)" data-src="./${m}/${mm}.html">${mm}</button>`)
+        $("#ListOfBtn").innerHTML+=(`<button class="btn btn-primary btn-block" ondblclick="console.log('./${m}/${mm}.html')" onclick="changeIframeSrc(this)" data-src="./${m}/${mm}.html">${mm}</button>`)
     })
   })
         function changeIframeSrc(elsrc){
