--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ overflow: scroll;
 apiTry:[
   "animeFActs","animeQoute","animesearch","Dnd","hogwarts","fannas","digimon","deckofcard","morse and skew","photooapi","moviesearch","waifu","keyframe","keyframe copy","randomanime","weatherapi","ytsapi"
 ],
-"":["chartbox","chatapp","binaryconverter","circlescatter","circleLoading","crud","foodcar","stickychat","twocardimg","slider","slicedtext","sentenceenhance","searchableselecet","scrollbar","rotatinggallery","relaxer","qrcode","particles","nousetorch","net","mobileonthouch","mirrorworld","messagelove","menubarnew","mangatodo","hoverbtn","heught","headntail","gyrooo","gymtimer","flowbtn"],
+"":["clock","clock2","clock3","chartbox","chatapp","binaryconverter","circlescatter","circleLoading","crud","foodcar","stickychat","twocardimg","slider","slicedtext","sentenceenhance","searchableselecet","scrollbar","rotatinggallery","relaxer","qrcode","particles","nousetorch","net","mobileonthouch","mirrorworld","messagelove","menubarnew","mangatodo","hoverbtn","heught","headntail","gyrooo","gymtimer","flowbtn"],
 "simple Projects JS":["bigsuricon","ckhra","crmtry","glasseffect","imagetext","jsontohtml","meshfill","morsecode","multipartTOJson","neumorphicbtn","papertext","shadowtext","shadowtext2","spr","stopwatch","TicTacToe"]
 
   }
