--- a/clock5.html
+++ b/clock5.html
@@ -6,20 +6,26 @@
   <style>
     .hourA,.hourB,.minuteA,.minuteB,.secondA,.secondB{
       height: 8rem;
-      width: 2rem;
-      align-items: center;
-      justify-content: center;
-      align-self: center;
+    }
+    .fContainer{
+      transform: translateY(40vh);
+    }
+    .hourB::after,.minuteB::after{
+      content: ":";
+      font-size: 100px;
+      position: absolute;
+      top:-20px;
+      transform: translateX(13vw);
     }
     .clockhand{
       width:2rem;
       height: .6rem;
       border-radius: 50px 5px 50px 5px;
-      left:20px;
     }
       /* 8:[6,2,3,7,1,4,5], */
 
     .clockhand:nth-child(6){
+      /* transform: rotateZ(-180deg) translateY(30px) translateX(-40px); */
       transform: rotateZ(-180deg) translateY(30px) translateX(-40px);
     }
     .clockhand:nth-child(2){
@@ -44,8 +50,6 @@
     }
 
 
-
-
   </style>
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -54,8 +58,8 @@
 <body>
 
 
-<div class="row">
-  <div class="hourA col-lg-2 col-md-2 col-sm-1 justify-content-center align-items-center align-self-center">
+<div class="fContainer d-flex flex-row justify-content-evenly align-items-start">
+  <div class="hourA align-self-start ">
     <div class="clockhand"></div>
     <div class="clockhand"></div>
     <div class="clockhand"></div>
@@ -64,7 +68,7 @@
     <div class="clockhand"></div>
     <div class="clockhand"></div>
     </div>
-    <div class="hourB col-lg-2 col-md-2 col-sm-1">
+    <div class="hourB">
       <div class="clockhand"></div>
       <div class="clockhand"></div>
       <div class="clockhand"></div>
@@ -74,7 +78,7 @@
       <div class="clockhand"></div>
     </div>
   
-  <div class="minuteA col-lg-2 col-md-2 col-sm-1 ">
+  <div class="minuteA">
     <div class="clockhand"></div>
     <div class="clockhand"></div>
     <div class="clockhand"></div>
@@ -83,7 +87,7 @@
     <div class="clockhand"></div>
     <div class="clockhand"></div>
   </div>
-  <div class="minuteB col-lg-2 col-md-2 col-sm-1">
+  <div class="minuteB">
         <div class="clockhand"></div>
     <div class="clockhand"></div>
     <div class="clockhand"></div>
@@ -92,7 +96,7 @@
     <div class="clockhand"></div>
     <div class="clockhand"></div>
   </div>
-  <div class="secondA col-lg-2 col-md-2 col-sm-1">
+  <div class="secondA">
     <div class="clockhand"></div>
     <div class="clockhand"></div>
     <div class="clockhand"></div>
@@ -102,7 +106,7 @@
     <div class="clockhand"></div>
     </div>
 
-    <div class="secondB col-lg-2 col-md-2 col-sm-1">
+    <div class="secondB">
       <div class="clockhand"></div>
       <div class="clockhand"></div>
       <div class="clockhand"></div>
@@ -136,10 +140,10 @@
     function updateIt(xDOM,sss){
       $$(xDOM).forEach((ss,i)=>{
         if(clockMap[sss].indexOf(i)>=0){
-          ss.style="background-color:black; box-shadow: 3px 3px 12px rgb(124, 125, 126)"
+          ss.style="box-shadow:inset rgb(47, 169, 240) 12px 13px 23px, inset rgb(123, 201, 246) -13px -13px 23px; background: rgb(85, 185, 143);"
 
         }else{
-          ss.style="background-color:white"
+          ss.style="background-color:transparent"
       }
       })
     }
@@ -154,6 +158,7 @@
   listb=currentdate.getMinutes().toString().split("")
   listc=currentdate.getSeconds().toString().split("")
   updateIt(".hourA>.clockhand",lista.length>1?lista[0]:0)
+  // updateIt(".hourA>.clockhand",8)
   updateIt(".hourB>.clockhand",lista.length>1?lista[1]:lista[0])
   updateIt(".minuteA>.clockhand",listb.length>1?listb[0]:0)
   updateIt(".minuteB>.clockhand",listb.length>1?listb[1]:listb[0])
